fix: correctly render disabled teaching unit on small screen

--- a/src/css/cnaminator.css
+++ b/src/css/cnaminator.css
@@ -6,8 +6,8 @@
 }
 
 .suite-inner .ue.disabled {
-  opacity: 0.5;
-  cursor: not-allowed;
+  opacity: 0.5 !important;
+  cursor: not-allowed !important;
 }
 
 .suite-inner .ue.selected {
